microservices/deploy/service-mesh/demo/broken-reviews.yaml
##################################################################################################
# reviews service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: reviews-service
  labels:
    app: reviews
    service: reviews
spec:
  selector:
    app:  reviews-app
  ports:
    - port: 1111
      targetPort: 1111
      name: http
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reviews-v1
  labels:
    app: reviews-app
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app:  reviews-app
      version: v1
  template:
    metadata:
      name: reviews
      labels:
        app:  reviews-app
        version: v1
    spec:
      serviceAccountName: reviews-sa
      containers:
        - name: reviews-app
          image: yuyatinnefeld/microservice-reviews-app:1.0.0
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reviews-v2
  labels:
    app: reviews-app
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app:  reviews-app
      version: v2
  template:
    metadata:
      name: reviews
      labels:
        app:  reviews-app
        version: v2
    spec:
      serviceAccountName: reviews-sa
      containers:
        - name: reviews-app
          image: yuyatinnefeld/microservice-reviews-app:2.0.0
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reviews-v3
  labels:
    app: reviews-app
    version: v3
spec:
  replicas: 1
  selector:
    matchLabels:
      app:  reviews-app
      version: v3
  template:
    metadata:
      name: reviews
      labels:
        app:  reviews-app
        version: v3
    spec:
      serviceAccountName: reviews-sa
      containers:
        - name: reviews-app
          image: yuyatinnefeld/microservice-reviews-app:3.0.0
